Change font and fix layout issue

--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@ html, body {
 body, button, input {
   font-size: 0.9rem;
   line-height: 1.618em;
-  font-family: 'Merriweather', serif;
+  font-family: 'Montserrat', serif;
   font-weight: 300;
 }
 body {
@@ -44,6 +44,7 @@ input:focus {
 .application, .history {
   display: flex;
   flex-grow: 1;
+  flex-basis: 0;
   flex-wrap: wrap;
   align-items: flex-start;
 }
